[dependencies]
error-chain = '0.12'
exit-future = '0.1'
futures = '0.1'
hex-literal = '0.1'
log = '0.4'
parity-codec = '3.2'
parking_lot = '0.7.1'
tokio = '0.1'
trie-root = '0.12.0'

[dependencies.basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-basic-authorship'
rev = '3e8a5e0e3e174139a1c6db447bf6cae5f900000f'

[dependencies.consensus]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura'
rev = '3e8a5e0e3e174139a1c6db447bf6cae5f900000f'

[dependencies.ctrlc]
features = ['termination']
version = '3.0'

[dependencies.inherents]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-inherents'
rev = '3e8a5e0e3e174139a1c6db447bf6cae5f900000f'

[dependencies.network]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-network'
rev = '3e8a5e0e3e174139a1c6db447bf6cae5f900000f'

[dependencies.node-template-runtime]
path = 'runtime'

[dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = '3e8a5e0e3e174139a1c6db447bf6cae5f900000f'

[dependencies.sr-io]
features = ["wasm-nice-panic-message"]
git = 'https://github.com/paritytech/substrate.git'
rev = '3e8a5e0e3e174139a1c6db447bf6cae5f900000f'

[dependencies.substrate-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = '3e8a5e0e3e174139a1c6db447bf6cae5f900000f'

[dependencies.substrate-client]
git = 'https://github.com/paritytech/substrate.git'
rev = '3e8a5e0e3e174139a1c6db447bf6cae5f900000f'

[dependencies.substrate-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = '3e8a5e0e3e174139a1c6db447bf6cae5f900000f'

[dependencies.substrate-service]
git = 'https://github.com/paritytech/substrate.git'
rev = '3e8a5e0e3e174139a1c6db447bf6cae5f900000f'

[dependencies.transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-transaction-pool'
rev = '3e8a5e0e3e174139a1c6db447bf6cae5f900000f'

[dependencies.grandpa]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-finality-grandpa'
rev = '3e8a5e0e3e174139a1c6db447bf6cae5f900000f'

[build-dependencies]
vergen = '3'
[profile.release]
panic = 'unwind'

[[bin]]
name = 'polymesh-substrate'
path = 'src/main.rs'

[package]
authors = ['Parity Technologies <admin@parity.io>']
build = 'build.rs'
edition = '2018'
name = 'node-template'
version = '1.0.0'
