[package]
name = "polymesh"
version = "2.0.0"
authors = ["Anonymous"]
build = "build.rs"
edition = "2018"

[[bin]]
name = "polymesh"
path = "src/main.rs"

[dependencies]
parking_lot = "0.9.0"
tokio = "0.1.22"
ctrlc = { version = "3.1.3", features = ["termination"] }
lazy_static = "1.4.0"
log = "0.4.8"
futures = "0.1.29"
exit-future = "0.1.4"
slog = "2.5.2"
hex-literal = "0.2.1"
polymesh-runtime = { path = "runtime" }
polymesh-primitives = { path = "primitives" }
sr-io = { git = "https://github.com/paritytech/substrate", rev = "203e2c23b51bf23f778b3afee16465e6dca04cf2" }
sr-primitives = { git = "https://github.com/paritytech/substrate", rev = "203e2c23b51bf23f778b3afee16465e6dca04cf2" }
primitives = { package = "substrate-primitives", git = "https://github.com/paritytech/substrate", rev = "203e2c23b51bf23f778b3afee16465e6dca04cf2" }
substrate-client = { git = "https://github.com/paritytech/substrate", rev = "203e2c23b51bf23f778b3afee16465e6dca04cf2" }
client-db = { package = "substrate-client-db", git = "https://github.com/paritytech/substrate", rev = "203e2c23b51bf23f778b3afee16465e6dca04cf2" }
substrate-executor = { git = "https://github.com/paritytech/substrate", rev = "203e2c23b51bf23f778b3afee16465e6dca04cf2" }
network = { package = "substrate-network", git = "https://github.com/paritytech/substrate", rev = "203e2c23b51bf23f778b3afee16465e6dca04cf2" }
consensus-common = { package = "substrate-consensus-common", git = "https://github.com/paritytech/substrate", rev = "203e2c23b51bf23f778b3afee16465e6dca04cf2" }
grandpa = { package = "substrate-finality-grandpa", git = "https://github.com/paritytech/substrate", rev = "203e2c23b51bf23f778b3afee16465e6dca04cf2" }
grandpa-primitives = { package = "substrate-finality-grandpa-primitives", git = "https://github.com/paritytech/substrate", rev = "203e2c23b51bf23f778b3afee16465e6dca04cf2" }
inherents = { package = "substrate-inherents", git = "https://github.com/paritytech/substrate", rev = "203e2c23b51bf23f778b3afee16465e6dca04cf2" }
substrate-service = { git = "https://github.com/paritytech/substrate", rev = "203e2c23b51bf23f778b3afee16465e6dca04cf2" }
substrate-cli = { git = "https://github.com/paritytech/substrate", rev = "203e2c23b51bf23f778b3afee16465e6dca04cf2" }
telemetry = { package = "substrate-telemetry", git = "https://github.com/paritytech/substrate", rev = "203e2c23b51bf23f778b3afee16465e6dca04cf2" }
transaction_pool = { package = "substrate-transaction-pool", git = "https://github.com/paritytech/substrate", rev = "203e2c23b51bf23f778b3afee16465e6dca04cf2" }
substrate-keystore = { git = "https://github.com/paritytech/substrate", rev = "203e2c23b51bf23f778b3afee16465e6dca04cf2" }
srml-babe = { git = "https://github.com/paritytech/substrate", default-features = false, rev = "203e2c23b51bf23f778b3afee16465e6dca04cf2" }
srml-staking = { git = "https://github.com/paritytech/substrate", default-features = false, rev = "203e2c23b51bf23f778b3afee16465e6dca04cf2" }
im-online = { package = "srml-im-online", git = "https://github.com/paritytech/substrate", default-features = false, rev = "203e2c23b51bf23f778b3afee16465e6dca04cf2" }
babe = { package = "substrate-consensus-babe", git = "https://github.com/paritytech/substrate", rev = "203e2c23b51bf23f778b3afee16465e6dca04cf2" }
babe-primitives = { package = "substrate-consensus-babe-primitives", git = "https://github.com/paritytech/substrate", default-features = false, rev = "203e2c23b51bf23f778b3afee16465e6dca04cf2" }
basic-authorship = { package = "substrate-basic-authorship", git = "https://github.com/paritytech/substrate", rev = "203e2c23b51bf23f778b3afee16465e6dca04cf2" }

[build-dependencies]
vergen = "3.0.4"
