[package]
name = "polymesh-primitives"
version = "2.0.0"
authors = ["Polymath"]
edition = "2018"

[dependencies]
chrono = {version = "0.4.18", default-features = false }
serde = { version = "1.0.104", optional = true, default-features = false, features = ["derive"] }
rand_core = { version = "0.5", default-features = false }
rand = { version = "0.7.3", default-features = false, optional = true }
rustc-hex = { version = "2.1.0", default-features = false }

# Ours
polymesh-primitives-derive = { path = "../primitives_derive", default-features = false }

# Crypto
blake2 = { version = "0.9.0", default-features = false }
confidential_identity = { git = "https://github.com/PolymathNetwork/cryptography.git", default-features = false, branch = "confidential-identity-b1.1.3" }
confidential_identity_v1 = { package = "confidential_identity", git = "https://github.com/PolymathNetwork/cryptography.git", default-features = false, branch = "b2.2.3-2" }
schnorrkel = { git = "https://github.com/PolymathNetwork/schnorrkel.git", branch = "fix-simd-issue", default-features = false }


# Substrate
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
frame-support = { version = "3.0.0", default-features = false }
frame-system = { version = "3.0.0", default-features = false }
sp-application-crypto = { version = "3.0.0", default-features = false, optional = true }
sp-arithmetic = { version = "3.0.0", default-features = false }
sp-core = { version = "3.0.0", default-features = false }
sp-io = { version = "3.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }
sp-runtime-interface = { version = "3.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }
sp-version = { version = "3.0.0", default-features = false }
libsecp256k1 = { version = "0.3.5", default-features = false, features = ["hmac"] }

[dev-dependencies]
hex = { version = "^0.4.0", default-features = false }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }

[features]
default = ["std"]

# Backends
u32_backend = [ "confidential_identity_v1/u32_backend", "schnorrkel/u32_backend"]
u64_backend = [ "confidential_identity_v1/u64_backend", "schnorrkel/u64_backend"]
avx2_backend = [ "confidential_identity_v1/avx2_backend", "schnorrkel/avx2_backend"]

no_std = ["confidential_identity_v1/no_std"]

std = [
    "chrono/std",
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "serde",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime-interface/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-version/std",

    # Crypto
    "blake2/simd",
    "blake2/std",
    "confidential_identity_v1/std",
    "polymesh-primitives-derive/std",
    "schnorrkel/std",
    "sp-application-crypto/std",

    # Rng
    "rand/std",
    "rand_core/std",
]

runtime-benchmarks = [
]
