[package]
name = "polymesh-primitives"
version = "5.0.0"
authors = [ "Polymesh Association" ]
license-file = "../LICENSE"
repository = "https://github.com/PolymeshAssociation/Polymesh"
description = "Polymesh Primitives"
edition = "2021"

[dependencies]
chrono = {version = "0.4.18", default-features = false }
serde = { version = "1.0.104", optional = true, default-features = false, features = ["derive"] }
rand_core = { version = "0.6", default-features = false }
rand = { version = "0.8", default-features = false, optional = true }
rustc-hex = { version = "2.1.0", default-features = false }
either = { version = "1.6.1", default-features = false }

# Ours
polymesh-primitives-derive = { version = "0.1.0", path = "../primitives_derive", default-features = false }

# Crypto
blake2 = { version = "0.10.2", default-features = false }
confidential_identity_v1 = { version = "1.1.0", default-features = false, features = ["sp-io"] }
confidential_identity_v2 = { version = "2.1.0", default-features = false, features = ["sp-io"] }
schnorrkel = { version = "0.10.1", default-features = false }

# Substrate
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
frame-support = { version = "4.0.0-dev", default-features = false }
frame-system = { version = "4.0.0-dev", default-features = false }
scale-info = { version = "2.0", default-features = false, features = ["derive", "decode"] }
sp-application-crypto = { version = "7.0.0", default-features = false, optional = true }
sp-arithmetic = { version = "6.0.0", default-features = false }
sp-core = { version = "7.0.0", default-features = false }
sp-io = { version = "7.0.0", default-features = false }
sp-runtime = { version = "7.0.0", default-features = false }
sp-runtime-interface = { version = "7.0.0", default-features = false }
sp-std = { version = "5.0.0", default-features = false }
sp-version = { version = "5.0.0", default-features = false }
libsecp256k1 = { version = "0.7", default-features = false, features = ["hmac", "static-context"] }

[dev-dependencies]
hex = { version = "^0.4.0", default-features = false }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }

[features]
default = ["std"]

# Backends
u32_backend = [ "confidential_identity_v1/u32_backend", "schnorrkel/u32_backend"]
u64_backend = [ "confidential_identity_v1/u64_backend", "schnorrkel/u64_backend"]

no_std = [
	"confidential_identity_v1/no_std",
	"confidential_identity_v2/no_std"
]

std = [
    "chrono/std",
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "serde",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime-interface/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-version/std",

    # Crypto
    "blake2/std",
    "confidential_identity_v1/std",
    "confidential_identity_v2/std",
    "polymesh-primitives-derive/std",
    "schnorrkel/std",
    "sp-application-crypto/std",

    # Rng
    "rand/std",
    "rand/std_rng",
    "rand_core/std",
]

runtime-benchmarks = [
]
