[package]
name = "polymesh-primitives-derive"
version = "0.1.0"
authors = [ "Polymesh Association" ]
license-file = "../LICENSE"
repository = "https://github.com/PolymeshAssociation/Polymesh"
description = "Derive impls for Polymesh Primitives"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.58", features = ["visit-mut"] }
quote = "1.0.7"
proc-macro2 = "1.0.24"

[features]
default = ["std"]
no_std = []
std = []
