[package]
name = "node-rpc"
version = "0.1.0"
authors = ["Polymath"]
edition = "2018"

[dependencies]
node-rpc-runtime-api = { path = "./runtime-api", default-features = false }

pallet-compliance-manager = { path = "../pallets/compliance-manager", default-features = false }
pallet-pips = { path = "../pallets/pips", default-features = false }
polymesh-primitives = { path = "../primitives", default-features = false }

pallet-portfolio = { path = "../pallets/portfolio", default-features = false }
pallet-identity = { path = "../pallets/identity", default-features = false }
pallet-transaction-payment = { path = "../pallets/transaction-payment", default-features = false }

# Substrate
codec = { package = "parity-scale-codec", version = "1.2.0" }
sp-core = {version = "2.0.1", default_features = false }
sp-std = {version = "2.0.1", default_features = false }
sp-runtime = { version = "2.0.1", default-features = false }
sp-api = { version = "2.0.1", default-features = false }
sp-blockchain = { version = "2.0.1" }
sp-rpc = { version = "2.0.1" }
frame-support = { version = "2.0.1", default-features = false }
frame-system = { version = "2.0.1", default-features = false }

# Others
jsonrpc-core = "15.0.0"
jsonrpc-core-client = "15.0.0"
jsonrpc-derive = "15.0.0"
serde = { version = "1.0.104", optional = true, features = ["derive"] }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "node-rpc-runtime-api/std",
    "pallet-identity/std",
    "pallet-pips/std",
    "pallet-portfolio/std",
    "pallet-transaction-payment/std",
    "polymesh-primitives/std",
    "serde",
    "sp-api/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
]
