[package]
name = "node-rpc"
version = "0.1.0"
authors = ["Polymath"]
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0" }
jsonrpsee = { version = "0.16.2", features = ["server", "macros"] }
sp-api = { version = "4.0.0-dev", default_features = false }
sp-blockchain = { version = "4.0.0-dev" }
sp-core = { version = "7.0.0", default_features = false }
sp-rpc = { version = "6.0.0" }
sp-runtime = { version = "7.0.0", default_features = false }
sp-std = {version = "5.0.0", default_features = false }
sp-weights = { version = "4.0.0", default_features = false }
frame-support = { version = "4.0.0-dev", default-features = false }
frame-system = { version = "4.0.0-dev", default-features = false }

node-rpc-runtime-api = { path = "./runtime-api", default-features = false }

pallet-compliance-manager = { path = "../pallets/compliance-manager", default-features = false }
pallet-pips = { path = "../pallets/pips", default-features = false }
polymesh-primitives = { path = "../primitives", default-features = false }

pallet-portfolio = { path = "../pallets/portfolio", default-features = false }
pallet-identity = { path = "../pallets/identity", default-features = false }
pallet-transaction-payment = { path = "../pallets/transaction-payment", default-features = false }

# Others
serde = { version = "1.0.104", optional = true, features = ["derive"] }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "node-rpc-runtime-api/std",
    "pallet-identity/std",
    "pallet-pips/std",
    "pallet-portfolio/std",
    "pallet-transaction-payment/std",
    "polymesh-primitives/std",
    "serde",
    "sp-api/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-weights/std",
]
